// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если платеж не удался нарисует экран с крестиком и ссылкой на чат 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_desktop"
>
  <Svg
    className="BillingPaymentStatus__icon_fail"
    src="svgID"
  />
  <div
    className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_bottom"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Произошла ошибка — платёж не прошёл",
      }
    }
  />
  <Link
    className="BillingPaymentStatus__supportLink"
    onClick={[Function]}
  >
    Написать в поддержку
  </Link>
</div>
`;

exports[`если платеж обрабатывается то рисует лоадер 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_desktop"
>
  <div
    className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_top"
  >
    Идет обработка платежа
  </div>
  <Loader
    color="blue"
    size="l"
    type="dots"
  />
</div>
`;

exports[`если произошла ошибка библиотеки checkout.js покажет сообщение 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_desktop"
>
  <Svg
    className="BillingPaymentStatus__icon_fail"
    src="svgID"
  />
  <div
    className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_bottom"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Оплата картой временно недоступна —<br/> воспользуйтесь другим способом оплаты",
      }
    }
  />
</div>
`;

exports[`если произошла ошибка инициализации платежа если это ошибка про уже купленный продукт, то покажет присланный текст и не покажет кнопку 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_desktop"
>
  <Svg
    className="BillingPaymentStatus__icon_fail"
    src="svgID"
  />
  <div
    className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_bottom"
    dangerouslySetInnerHTML={
      Object {
        "__html": "i am an error",
      }
    }
  />
</div>
`;

exports[`если произошла ошибка инициализации платежа покажет сообщение 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_desktop"
>
  <Svg
    className="BillingPaymentStatus__icon_fail"
    src="svgID"
  />
  <div
    className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_bottom"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Возникла ошибка системы оплаты.<br/> Попробуйте повторить через пару минут.",
      }
    }
  />
  <Button
    className="BillingPaymentStatus__errorButton"
    color="blue"
    disabled={false}
    onClick={[Function]}
    size="l"
    type="button"
    width="default"
  >
    Повторить
  </Button>
</div>
`;

exports[`если это новый платеж то ничего не рисует 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_desktop"
>
  <div
    className="BillingPaymentStatus__successMessage"
  >
    <Svg
      className="BillingPaymentStatus__icon_success"
      src="svgID"
    />
    <div
      className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_bottom"
    >
      Платёж совершён успешно
    </div>
  </div>
</div>
`;

exports[`при успешной оплате если есть автоподнятие после оплаты покажет картинку и кнопку включения 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_desktop"
>
  <div
    className="BillingPaymentStatus__successMessage BillingPaymentStatus__successMessage_short"
  >
    <Svg
      className="BillingPaymentStatus__icon_success"
      src="svgID"
    />
    <div
      className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_bottom"
    >
      Платёж совершён успешно
    </div>
  </div>
  <div
    className="BillingPaymentStatus__prolongation"
  >
    <Svg
      className="BillingPaymentStatus__icon_boost"
      src="svgID"
    />
    <div
      className="BillingPaymentStatus__prolongationText"
    >
      Хотите, чтобы ваше объявление было наверху каждый день?
    </div>
    <div
      className="BillingPaymentStatus__prolongationControls"
    >
      <Button
        className="BillingPaymentStatus__prolongationBoostButton"
        color="blue"
        disabled={false}
        onClick={[Function]}
        size="m"
        type="button"
        width="default"
      >
        Включить автоподнятие за 
        99 ₽
         в день
      </Button>
      <Select
        maxMenuHeight={0}
        menuSize="m"
        mode="radio"
        name="time"
        onChange={[Function]}
        placeholder="—"
        size="m"
        value="10:00"
      >
        <Item
          key="00:00"
          value="00:00"
        >
          в 00:00
        </Item>
        <Item
          key="01:00"
          value="01:00"
        >
          в 01:00
        </Item>
        <Item
          key="02:00"
          value="02:00"
        >
          в 02:00
        </Item>
        <Item
          key="03:00"
          value="03:00"
        >
          в 03:00
        </Item>
        <Item
          key="04:00"
          value="04:00"
        >
          в 04:00
        </Item>
        <Item
          key="05:00"
          value="05:00"
        >
          в 05:00
        </Item>
        <Item
          key="06:00"
          value="06:00"
        >
          в 06:00
        </Item>
        <Item
          key="07:00"
          value="07:00"
        >
          в 07:00
        </Item>
        <Item
          key="08:00"
          value="08:00"
        >
          в 08:00
        </Item>
        <Item
          key="09:00"
          value="09:00"
        >
          в 09:00
        </Item>
        <Item
          key="10:00"
          value="10:00"
        >
          в 10:00
        </Item>
        <Item
          key="11:00"
          value="11:00"
        >
          в 11:00
        </Item>
        <Item
          key="12:00"
          value="12:00"
        >
          в 12:00
        </Item>
        <Item
          key="13:00"
          value="13:00"
        >
          в 13:00
        </Item>
        <Item
          key="14:00"
          value="14:00"
        >
          в 14:00
        </Item>
        <Item
          key="15:00"
          value="15:00"
        >
          в 15:00
        </Item>
        <Item
          key="16:00"
          value="16:00"
        >
          в 16:00
        </Item>
        <Item
          key="17:00"
          value="17:00"
        >
          в 17:00
        </Item>
        <Item
          key="18:00"
          value="18:00"
        >
          в 18:00
        </Item>
        <Item
          key="19:00"
          value="19:00"
        >
          в 19:00
        </Item>
        <Item
          key="20:00"
          value="20:00"
        >
          в 20:00
        </Item>
        <Item
          key="21:00"
          value="21:00"
        >
          в 21:00
        </Item>
        <Item
          key="22:00"
          value="22:00"
        >
          в 22:00
        </Item>
        <Item
          key="23:00"
          value="23:00"
        >
          в 23:00
        </Item>
      </Select>
    </div>
  </div>
</div>
`;

exports[`при успешной оплате если есть автопродление после оплаты покажет картинку и кнопку включения 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_desktop"
>
  <div
    className="BillingPaymentStatus__successMessage BillingPaymentStatus__successMessage_short"
  >
    <Svg
      className="BillingPaymentStatus__icon_success"
      src="svgID"
    />
    <div
      className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_bottom"
    >
      Платёж совершён успешно
    </div>
  </div>
  <div
    className="BillingPaymentStatus__prolongation"
  >
    <div
      className="BillingPaymentStatus__prolongationText"
    >
      Хотите продать автомобиль удобнее с автопродлением опции?
    </div>
    <Button
      color="blue"
      disabled={false}
      onClick={[Function]}
      size="m"
      type="button"
      width="default"
    >
      Включить автопродление
    </Button>
    <div
      className="BillingPaymentStatus__prolongationPriceText"
    >
      <Price
        currency="RUR"
        price={999}
        separator=" "
      />
       
      каждые 3 дня
    </div>
  </div>
</div>
`;

exports[`при успешной оплате покажет обычный экран если есть автопродляемая опция но она была выбрана до оплаты 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_desktop"
>
  <div
    className="BillingPaymentStatus__successMessage"
  >
    <Svg
      className="BillingPaymentStatus__icon_success"
      src="svgID"
    />
    <div
      className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_bottom"
    >
      Платёж совершён успешно
    </div>
  </div>
</div>
`;

exports[`при успешной оплате покажет обычный экран если нет автопродляемых опций 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_desktop"
>
  <div
    className="BillingPaymentStatus__successMessage"
  >
    <Svg
      className="BillingPaymentStatus__icon_success"
      src="svgID"
    />
    <div
      className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_bottom"
    >
      Платёж совершён успешно
    </div>
  </div>
</div>
`;

exports[`при успешной оплате покажет обычный экран если это мобилка 1`] = `
<div
  className="BillingPaymentStatus BillingPaymentStatus_platform_mobile"
>
  <div
    className="BillingPaymentStatus__successMessage"
  >
    <Svg
      className="BillingPaymentStatus__icon_success"
      src="svgID"
    />
    <div
      className="BillingPaymentStatus__statusText BillingPaymentStatus__statusText_bottom"
    >
      Платёж совершён успешно
    </div>
  </div>
</div>
`;
